--- a/Assets/style.css
+++ b/Assets/style.css
@@ -8,6 +8,14 @@
 body{
  background: #7851a9;
 }
+
+
+.infobox,.startbtn,.quizitems{
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+}
 .infobox{
     display:none ;
     top: 30%;
@@ -18,6 +26,7 @@ body{
     background:gold;
     border-radius: 15px;
 }
+*/
 .infobox .button{
     height: 40px;
     display: flex;
@@ -51,14 +60,7 @@ body{
 }
 .infobox .listitems .info{
     margin:5px;
-
 }
-.startbtn{
-position: absolute;
-top: 50%;
-left: 50%;
-}
-
 .startbtn button{
     font-size: 30px;
     font-weight: 400;
@@ -68,19 +70,16 @@ left: 50%;
     cursor: pointer;
 }
 
-.quizitems{
-position: absolute;
-top: 35%;
-left: 20%;
-}
 
+/*quiz items*/
 .quizitems{
-    width: 550px;
-    background: yellow;
-    border-radius: 10px;
+width: 550px;
+background: yellow;
+border-radius: 10px;
 }
-
 .quizitems header{
+    position: relative;
+    height: 50px;
     padding: 10px;
     display: flex;
     align-items: center;
@@ -89,14 +88,14 @@ left: 20%;
     box-shadow: 0px 2px 2px;
 }
 
-.quizitems .title{
+.quizitems header .title{
 font-size: 30px;
 font-family: Arial, Helvetica, sans-serif;
 
 }
 
 
-.quizitems .timer{
+.quizitems header .timer{
 font-size: 15px;
 display:flex;
 align-items: center;
@@ -112,10 +111,24 @@ padding: 0 5px;
 }
 
 .quizitems section{
-    padding: 20px;
+    padding: 20px 20px 20px 20px;
+    background: purple;
 }
 
-.quizitems .question{
+.quizitems section .question{
     font-size: 19px;
     font-weight: 600;
+}
+
+.quizitems section .optionliszt {
+    display: block;
+    padding:10px 0;
+}
+
+section .optionliszt .option {
+background: lavender;
+display: flex;
+align-items: center;
+justify-content: space-between;
+border: solid;
 }
